Add initial styling based on typings.gg - will be changed later

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 				<div id="text">
 					lorem ipsum dolor sit amet consectetur adipisicing elit
 				</div>
-				<div id="input">
-					<input id="terminal-input" type="text" autocomplete="off" autocapitalize="off">
-					<button>Redo</button>
+				<div id="input-container">
+					<input id="terminal-input" type="text"
+						autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
+					<button id="redo-btn">redo</button>
 				</div>
 			</div>
 		</div>
