Refactor themes into single file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Type</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="./themes/nord.css"> <!-- set default theme -->
+	<link rel="stylesheet" href="theme.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -51,6 +51,7 @@
 			<button class="highlight-btn">Themes</button>
 		</footer>
 	</div>
-	<script src="index.js"></script>
+
+	<script type="module" src="js/index.js"></script>
 </body>
 </html>
