Create project structure and refactor themes into main stylesheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Type</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/theme.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +26,7 @@
 				<button id="modes" class="highlight-btn" mode="wordcount">
 					Words Remaining: XX
 				</button>
-				<div id="quick-stats">
+				<div id="status-stats">
 					<span id="wpm">WPM: XX</span>
 					|
 					<span id="acc">ACC: XX</span>
