Rename ids and fix responsive styles

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
 	<div id="container">
-		<div id="header">
+		<header>
 			<button id="profiles" class="highlight-btn">
 				Profiles
 				<span>&gt;</span>
 			</button>
-			<header>Type</header>
+			<div id="title">Type</div>
 			<button id="stats" class="highlight-btn">
 				<span>&lt;</span>
 				Statistics
 			</button>
-		</div>
+		</header>
 
 		<div id="main">
 			<div id="status-bar">
@@ -37,7 +37,7 @@
 					lorem ipsum dolor sit amet consectetur adipisicing elit est sit
 				</div>
 				<div id="input-container">
-					<input id="terminal-input" type="text"
+					<input id="input" type="text"
 						autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
 					<button id="redo-btn">redo</button>
 				</div>
@@ -48,6 +48,8 @@
 			<button class="highlight-btn">Settings</button>
 			|
 			<button class="highlight-btn">Themes</button>
+			|
+			<button class="highlight-btn">Help</button>
 		</footer>
 	</div>
 
